--- a/Series_de_Fourier_Generalizadas.ipynb
+++ b/Series_de_Fourier_Generalizadas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhGxbXk+d9aN0zfjzXjm2M",
+      "authorship_tag": "ABX9TyOu/VonxLuYnIllH2vpC68s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -353,13 +353,26 @@
         "print(eigenvalores)\n",
         "\n",
         "# Serie de Fourier generalizada\n",
-        "serie_fourier_generalizada = sum(c * ef for c, ef in zip(coeficientes, eigenfunciones))"
+        "serie_fourier_generalizada = sum(c * ef.rhs for c, ef in zip(coeficientes, eigenfunciones))"
       ],
       "metadata": {
-        "id": "b6FNitMRSh6f"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b6FNitMRSh6f",
+        "outputId": "f01d6212-e9dc-4492-8ccc-c1cf2ca9b15b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eigenvalores:\n",
+            "[-2*pi + 1 + pi**2, -4*pi + 1 + 4*pi**2, -6*pi + 1 + 9*pi**2, -8*pi + 1 + 16*pi**2]\n"
+          ]
+        }
+      ]
     }
   ]
 }
